--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=8426001634:AAG1fItTuD1-VK40_AvS1Pi7nlQDefxYd9w
-DATABASE_URL=postgresql://neondb_owner:npg_ADFO1IVswnS9@ep-sweet-unit-ah8p0rdn-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+BOT_TOKEN=8501896042:AAGYRYEgijuti9Gq1CKrPdU4FomNsbeJlHc
+DATABASE_URL=postgresql://neondb_owner:npg_eR0jNf3lIUqs@ep-plain-surf-aifg4qwg-pooler.c-4.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
